<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background" />
    <ImageView
        android:id="@+id/infoback"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/infoback" />

    <ImageView
        android:id="@+id/userphoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="110dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/studentnum"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="140dp"
        android:text="@string/student_num"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="168dp"
        android:text="@string/subject"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="168dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="193dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="218dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="243dp"
        android:text="@string/edit" />
    <Button
        android:id="@+id/monitor"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="380dp"
        android:layout_marginTop="50dp"
        android:text="@string/monitor"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/feedback"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="380dp"
        android:layout_marginTop="120dp"
        android:text="@string/feedback"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="20sp" />
    <Button
        android:id="@+id/aboutus"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="380dp"
        android:layout_marginTop="190dp"
        android:text="@string/info"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="20sp" />
</RelativeLayout>



